@@ -33,25 +33,32 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
       brand: :visa
     )
     @three_ds_enrolled_card = credit_card(
-      '4000000000000002',
+      '4000000000001091',
       verification_value: '321',
       month: '12',
       year: (Time.now.year + 2).to_s,
       brand: :visa
     )
     @three_ds_invalid_card = credit_card(
-      '4000000000000010',
+      '4000000000002537',
       verification_value: '321',
       month: '12',
       year: (Time.now.year + 2).to_s,
       brand: :visa
     )
     @three_ds_enrolled_mastercard = credit_card(
-      '5200000000001005',
+      '5200000000002235',
       verification_value: '321',
       month: '12',
       year: (Time.now.year + 2).to_s,
       brand: :master
+    )
+    @three_ds_frictionless_card = credit_card(
+      '4000000000002313',
+      verification_value: '321',
+      month: '12',
+      year: (Time.now.year + 2).to_s,
+      brand: :visa
     )
     @visa_network_token = network_tokenization_credit_card(
       '4111111111111111',
@@ -137,6 +144,23 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
         auto_renew: true,
         amount: 100
       }
+    }
+
+    @three_ds_options = {
+      three_ds_2: {
+        browser_info: {
+          accept_header: 'unknown',
+          depth: 100,
+          java: false,
+          language: 'US',
+          height: 1000,
+          width: 500,
+          timezone: '-120',
+          user_agent: 'unknown'
+        }
+      },
+      return_url: 'return_url.com',
+      payer_auth_enroll_service: true
     }
 
     @issuer_additional_data = 'PR25000000000011111111111112222222sk111111111111111111111111111'
@@ -1146,69 +1170,52 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
   end
 
   def test_3ds_enroll_request_via_purchase
-    assert response = @gateway.purchase(1202, @three_ds_enrolled_card, @options.merge(payer_auth_enroll_service: true))
+    assert response = @gateway.purchase(1202, @three_ds_enrolled_card, @three_ds_options)
     assert_equal '475', response.params['reasonCode']
     assert !response.params['acsURL'].blank?
     assert !response.params['paReq'].blank?
-    assert !response.params['xid'].blank?
     assert !response.success?
   end
 
   def test_3ds_enroll_request_via_authorize
-    assert response = @gateway.authorize(1202, @three_ds_enrolled_card, @options.merge(payer_auth_enroll_service: true))
+    assert response = @gateway.authorize(1202, @three_ds_enrolled_card, @three_ds_options)
     assert_equal '475', response.params['reasonCode']
     assert !response.params['acsURL'].blank?
     assert !response.params['paReq'].blank?
-    assert !response.params['xid'].blank?
     assert !response.success?
   end
 
   def test_successful_3ds_requests_with_unenrolled_card
-    assert response = @gateway.purchase(1202, @three_ds_unenrolled_card, @options.merge(payer_auth_enroll_service: true))
+    assert response = @gateway.purchase(1202, @three_ds_unenrolled_card, @three_ds_options)
     assert response.success?
 
-    assert response = @gateway.authorize(1202, @three_ds_unenrolled_card, @options.merge(payer_auth_enroll_service: true))
+    assert response = @gateway.authorize(1202, @three_ds_unenrolled_card, @three_ds_options)
     assert response.success?
   end
 
-  # to create a valid pares, use the test credentials to request `test_3ds_enroll_request_via_purchase` with debug=true.
-  # Extract this XML and generate an accessToken. Using this access token to create a form, visit the stepUpURL provided
-  # and check the network exchange in the browser dev console for a CCA, which will contain a usable PaRes. Documentation for this feature
-  # can be found at https://docs.cybersource.com/content/dam/new-documentation/documentation/en/fraud-management/payer-auth/so/payer-auth-so.pdf
-  # Version => September 2017
-  # Chapter 2 "Authenticating Enrolled Cards" page 27
-  # something like:
-  # <html>
-  #   <body onload="document.PAEnrollForm.submit();">
-  #     <form id="PAEnrollForm" name="PAEnrollForm" action="acsURL" method="post" target="paInlineFrame">
-  #       <input type="hidden" name="PaReq" value="paReq value" />
-  #       <input type="hidden" name="TermUrl" value="localhost_url" />
-  #       <input type="hidden" name="MD" value="xid value" />
-  #     </form>
-  #   </body>
-  # </html>
   def test_successful_3ds_validate_purchase_request
-    assert response = @gateway.purchase(1202, @three_ds_enrolled_card, @options.merge(payer_auth_validate_service: true, pares:))
+    assert response = @gateway.purchase(1202, @three_ds_frictionless_card, @three_ds_options)
     assert_equal '100', response.params['reasonCode']
-    assert_equal '0', response.params['authenticationResult']
+    assert_equal '6', response.params['authenticationResult']
     assert response.success?
   end
 
   def test_failed_3ds_validate_purchase_request
-    assert response = @gateway.purchase(1202, @three_ds_invalid_card, @options.merge(payer_auth_validate_service: true, pares:))
+    assert response = @gateway.purchase(1202, @three_ds_invalid_card, @three_ds_options)
     assert_equal '476', response.params['reasonCode']
     assert !response.success?
   end
 
   def test_successful_3ds_validate_authorize_request
-    assert response = @gateway.authorize(1202, @three_ds_enrolled_card, @options.merge(payer_auth_validate_service: true, pares:))
+    assert response = @gateway.authorize(1202, @three_ds_frictionless_card, @three_ds_options)
     assert_equal '100', response.params['reasonCode']
-    assert_equal '0', response.params['authenticationResult']
+    assert_equal '6', response.params['authenticationResult']
     assert response.success?
   end
 
   def test_failed_3ds_validate_authorize_request
-    assert response = @gateway.authorize(1202, @three_ds_invalid_card, @options.merge(payer_auth_validate_service: true, pares:))
+    assert response = @gateway.authorize(1202, @three_ds_invalid_card, @three_ds_options)
+
     assert_equal '476', response.params['reasonCode']
     assert !response.success?
   end
@@ -1428,12 +1435,6 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
     assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_failure response
     assert_equal 'One or more fields contains invalid data: c:billTo/c:postalCode', response.message
-  end
-
-  def pares
-    <<~PARES
-      eNrdWVnPqsjWvn8T/8NOn0u7m0FROHG/STGIiKBMMtwxDwIyg/z6U/ruqfvsTrq/m5N8JsSiWLVqzU8t2OlJE4asFvp9E77vpLBt3Tj8lAaff0knQEp22WzrUXB886EJAfrL++4C1LB9EbxG2zEUat1PQibsnZF0L8u5zPOSWR/bz5B6CJs2vZfv2O/o7/gO+XoLN2r8xC27953r17Qgv683FI5tdsiX210RNgL7HoSR2+fdDvm43SHf113656iFQk9p8O5aCX3mMMcrhZVvBUezkK3wKh8dFnzeIU+KXeB24TuOolt0gxOfsPW/UezfKLlDXvO76skOFPce8sZwFMr648wOmqcJS//xTq7RHfLtbhdO1b0MIQVc8G28Q74LV7nlO/rH35M3nN3p1vuuS4sfhaKeQmHbHfKa37Wd2/Xtu71Dvox2vjsM7wAAGpj7vFDAc5ippulw3D7ez0uo7ItkF/rpO0pAoeD/axXI43uTdknxFPWPEzvkKQry8uf7TkvjEm7WhJ+mIi+hF5Ouq/6NIOM4/j6ufr83MQIFRhGUQiBB0Kbxv375WBUGQhnd/9Eyxi3vZeq7eTq7HYwMKeySe/Dpm2w/Y6OrT04YonLMb5DVbz62Ln97zqArjIA8kZ8z/UGzv7PLn4VtWve3NnGx5wZ/YvS+U8MofEZE+MlQhc+//OvvpAabxmHb/V9E+SrGjxy+8ru6eR++O8vlPccN0gpO/UnVr3L7SOdTx6+T+PPXdR+UO+Sb7F8U+/DiD9b6ILxg+32EFIdS56aldnloNGKZmq0POF6Q4jbs4jr3qkNnlXVs0IrDhM35cTpktiPcEAXdHNzYdq1TsHg7iCKgm7GKK0TFEH7i+UHFSEzMuvzUAwrV/VJADWQvlIziN4FCZse7mxTsw3HcUEiCOdLrjLeKxZvWrBQHD720kEJvo03HuDbpRpgBitVgsyLliA6t85ashcNqGZnS2d2qocv7EW1MUZOtqvhsrhn1sHgzm2FDUzw6HqyYrUStVsw4bSlBJgQ6omV/W0lzWib5MEAbpNHgPI4N1Z9TNKGVodHi2XcEyiGhTHO+tyQNazFKU7O8J9mDpd+waKscLsoSDE3S+PUGf+CV2/bNzZXw6dwH4PPnH6Lqi2fE8PHhCYtAKdbt3I+R1ntZ6HeyCysE89nQfv2k6Z/PSXr/9dPpswTrz7359dP5M+M2QVq6OXMvYPGEkcncm+revBICPje+EXwCDOTByN8n2LC4f3qFQrND/rzlSwbo3C6NYIrB0ikJwl6eGYamlzEYBRrEgiJd6qyvLtb13E/4SKZ6dk+iDMh0fKuTW8pTI0oDpd0DliYlpR0ZxWYXb1dF4bnxeDVmLpcYiQeYwTGJ5Cv4/uHweW+bE+vhWOdYx8zRaNZbHUd4JQGfD17GxRK9fq1ZvDGTZBn4NQusYxUcbrFtEjeBkwfPolvX3Pc2bkxHFqR0LF9pIOk8Kid+oVZesW8VnOo88/qANPHiDXJ5BEX+2k/RQbgf0Yekc/BSRokF8KLd11z2mntIs0HIeu5KAi9KKjryo81CvaB2LK2ytnW8uSaReAzNOSY2QMtVDk7kfsZdJfqLxuMofdd4jBVD1iXNGIUPTuKT0/Sd01MrE8v9Qs6fGvolPfjFHnVNqpcUcmSV16oDCxzZMQnUWwkTq4PTU/PFG3SWRHPU3TXJiZnB8cMetg7yqw79Sgv/5TNuD8CZAQoJns+ZWIRjDize0PqEcSYjpQTq66ZmqUctUor5gZrNbbMXToWzR+llZ1un9GIBKjVuwDgDkUtkkJa9pfZdh+pzDVNxPqbxdqncpzPnELA4dOeM6OJ1vKo4c8PKrddelputYaXu1pxEZmYiQjCJVevvLZnMUwPWPPHBtPni7Sjss2a7rDxPR31ZQrZOLNOyqHJeVavbZgnqod5adYyb28afFSwWtprnCd2c8UIWs2WsHCfE4IzF26boHXPj4m0uisGdUqahOtH1MNd6bvaIDlxvWddpvrGE430rr1VKnzXRly7ggjIPzen7x/XoUTixeNMLheCjyBN6ZsOfqSG+b7ubdT0BBX10N6yiguNSIik9jMix7ZY2w/cSMgosUAB9Xwt0xTIMcMEIowBAz6qoDpQDQgNhBCw4P/13UEgaRCQH45qhIeVBedHlNG2Pe2AL4mjTtGIcYK7yDNPyizegGHt6hPFHo88IDNhYMWla21BrV8QYa454dwCHCkNOhnplG3DXQfTaSeU4ngVmnHxE9uLt57FNBx/UJHfNaEPai7Eh0ufkNt2DgzqeU3Lw+a46mfLDY4g5NLFk8RZY6v1UwNjWqMy+kqM8C5PMK2tbVybJNMYzCzBZv8F8S1KH5VDZdFInAw/5QUm2peb+SmWN29gv3uzVsZVY/6Xrh6YcTTPtKOqgpOO4oWNuTyv+CGzbcw8q6rP34bSiG1fDBnslj6dSJjxzj0GZ+BhWDqqTaPJlJ2FUbAmaeH9gJ6+psXx01iqqLgFYtuuxiraJeZYYlGcKhtcAzy85g+aABOvTYQYBnchxcovpZEj2QAXQJ8Iz9dChkbJ9bD+rzErKpPGs2KItOAKwvbWqcAqtKI3E3GDeARPGOL8XjIzONA7F9cONCHDu4a7UzDOumD3LbbDPbWj1RJmvtZ0J40X/SRWGGf2MAg6wgXs4NVgr9Ffy+iCiPjYwMc8Fysx535evGLIN1trlfAPrDqX4rU7iIc5HSznorVKIEVKtssXbKKgkFG7fc+ppuqzzeo5xSm9u4XWJagdm2aWWrh5vcqGEoGPOt8u8tmYjvoKsLzBTYM04cBNZsRZvjkGzobDeIqaqz+g+kug8Yho29h/k6HlzuAHqUrDExyNBmjMSb6KBptp5pCi0ykjjtJqSulfFDayZnGWWyVz5gTSZe/UYrpwrOdD5xdvoyKUctKsjR8nGbDWBnyiwKn1ynzeqoGY86xCkwaLePi5NFV28PZgyUXu0xr2K7TGPS8siqbGjfuSvW3lTYOkK87FLnNc5feeiQJ1LmyeoHhAvkP8zev4MTrlYh0mOF9/gNFCWF9y6oENSOkiyFq2RUC7sT+GU+F/BqfClKLzglPtLOC2oIWC+QekkzQCXMuOPUPqa+wFKD+N/gdPi7UdI5Ka/CYgaLIfxa82JmwLdMWWY1n6Ro6FGJ16hxE9pfX6qoIaZo3M3iRFeNgCT5P2F3XT4j7umDAEH7kf/E9hs2cQbddpz+o4K41kS1ht1694hTExS52Phw7hgDKaH07V2q+44kbQ0H9eGFGeJf8pTZi9N8n66E3u07jo6vCtHkc83nG5ubsLKU+WbsHjzbtIs5ZM0RkKExNnpMN2E1guXrnliwMO9bylcmcor0jCaeZkUO03yucG46xRtvNTHe8me/CNAYUkGOc0HfNRRJ41AM8Xscfvc6hQW0hUfpfapSx2Rk1q3DxOyilTnaoNAtmNjfd70+TnI1tYKmwIRppB11uPjJUEZjS90Fol8YgP7hrLm91x4imVAgeJsYqNyFVpiiS9JgSsf8V12VvIQ3tYXrCTHHCNdWNzn7pocQE8SY9db/uO0Rft9zQscF+mn9AfYBCxDQ5zWPoBIegEkwwL+CZ4gfh5gJLD+AD8ID8gInQNzj87o5it0OSydSjwTWzXtJ3n196BrcAoHZgiR2zg3/DR+jD9G6I800Hdfqa7HwYOApmhE5hfjKMYvSFdpRhoFV4FlEZ34GThf84/LHRj/ue6aQa9f6RPslDT0cdIVVGbBBxgra24Pj5b+Zd/3jWnRZXJQD2vAbuaMyZF+b6/Hw/jaJaPpeNzfgbGhW1hIUS9wswwLCwILB5gca95c79fr50HzKN4dIRl8Gcb2iVYAG8fwFCLqo01qPT5UtCTlbT55uKlcjou3xAjCUuBW1UPkFQTINilAC6vJeTv04IrR7kbiheqwVGWYqKIep+klu08lry9PhC5Kcm0n9bJoYYwLXn7wPL6cmGsfrI4z5kdUqm+24eDN/dSXwVDcj8W84vjNTG21XmkI1UsYo12T22hdjFXXx8RQQd8tlcnLfG1vbFlnuKTD7RTRj5I6RnFo83d+YvPD4XBMwSOPZZ0QD5zVFL1vKuFBs5VTdJ60iCFsYg8zGCp0m+00H/HJK7h1IzoTY4+TT4WzUxSXqFiby/goSsDkAuFcZ4nLs6hCYYNlncKrb1lZOd9DafG2DRtMVB8keT/T7bGi62TzoA2GczHObzzhb4IKu8kgqHTiN1A5uWyGj4S5OpSxv5dTt1yJ6fz/FFTm/waV2/8KVJIv58cnqNh/YTfNwyn0CSdQpn8AKA9aH4tWP2LGIToeqrCR6cNmOQ+9SHrQ4vPAAyAIUTaoyuPICSEhgnOY6AJgH1OMT4Zd701MB3WzXBNIRTunywVvQ3gIdLpZaG4VEoH8Dns0H7fq3DDH5Ticej7ci1137TS2FBCBqG60hN6iywHzfXDKNqFOddR+3F4L50pEjl/3p9I4tCIv6/XiDQPenetgJ+5U7AxSEiW4GbGltNwivI+JYpSf98iK1A2qmoL4YpQoZRa9Fwa+IHQasU1uenOMPQgFehU1qsUPhOz1S+8RsSI46Ld7IDGmCEbWlKRuOj6ClTezOllzWM6YszHl9E1W2M1ZNcTIuvt4AGEcu2Aap3TRbOYRTh0vSMvUBmon96+Agq9Hj/1LMKG/Qgns0f4AJs9+46NrgnzCih5HPuNgB2F/jYbLs1g/S7XEKuuTznWSLmHPrgyC77e+TL/zY6N2WH2+XDdeed2QMPhix4utLPv52f511Lh6XFYE8Ghxx9XL1nQOTWbU+VV2WnmFoD493cY7G7TIMqKkWOzxB0dWGxtvK3o+47JLpsHxyFrgnF62FVYj/hVqx472qtHOorbRFarGYgyDSOcCdb4FeqV4vcaGtWtU55jqOdgrYMfcnrnGv/Ets5TmSthGHlcNw+INV7gwzJ3MFHv5BnvK44aZSyEQT+yyEFbopVfmbK6Ha10c++zuOpEo8tHq3rFC49108l5puMESNYwn9dJwkrUqZXdOr4HEuxlWOzmlW+vLTe6rgo2Z9mY9oHkNBHZZVGpZkTSf6PQxCBZOtGoXoR3BnxdvJX8lluYVbdrk4mJyaeybkbreQ67hUWLGSKquSY1KC3PUybXy07M98v3NHfLtbd7393yv7xmvDy7PV/A/foj5D/LlVqY=
-    PARES
   end
 
   def test_successful_verify_with_elo
